--- a/Addons/Bioshock2GraphicalUpgrade/src/Bioshock2GraphicalUpgrade/Bioshock2GraphicalUpgrade.vcxproj
+++ b/Addons/Bioshock2GraphicalUpgrade/src/Bioshock2GraphicalUpgrade/Bioshock2GraphicalUpgrade.vcxproj
@@ -113,7 +113,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>$(CoreLibraryDependencies);%(AdditionalDependencies);d3dcompiler.lib;libMinHook.x86.lib</AdditionalDependencies>
+      <AdditionalDependencies>$(CoreLibraryDependencies);%(AdditionalDependencies);d3dcompiler.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
