--- a/Addons/BioShockInfiniteGraphicalUpgrade/src/BioShockInfiniteGraphicalUpgrade/BioShockInfiniteGraphicalUpgrade.vcxproj
+++ b/Addons/BioShockInfiniteGraphicalUpgrade/src/BioShockInfiniteGraphicalUpgrade/BioShockInfiniteGraphicalUpgrade.vcxproj
@@ -181,10 +181,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AreaTex.h" />
-    <ClInclude Include="common.h" />
+    <ClInclude Include="HLSLTypes.h" />
+    <ClInclude Include="Common.h" />
     <ClInclude Include="ComPtr.h" />
-    <ClInclude Include="ensure.h" />
-    <ClInclude Include="helpers.h" />
+    <ClInclude Include="Ensure.h" />
+    <ClInclude Include="GraphicalUpgradePath.h" />
+    <ClInclude Include="Helpers.h" />
     <ClInclude Include="SearchTex.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
